crates/stef-compiler/tests/inputs/invalid/enum_gen_dup.stef
enum Sample<T, T> {
    One @1,
    Two { value: T @1 } @2,
}
